--- a/in.html
+++ b/in.html
@@ -24,7 +24,7 @@
       <div class="row">
           <div class="col-12 d-flex flex-row align-items-center justify-content-between">
             <div class="heading-brand">DriveSobr</div>
-            <a href="signup.html">Login &nbsp; &nbsp; &nbsp; Sign Up</a>
+            <a href="signup.html">Sign Out</a>
           </div>
       </div>
       <div class="row mt-6">
