Improved front-end

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <h1>Have you been intoxicated? <br>
                 Let us ensure that you are sober enough to drive!</h1>
             <p class="lead mb-5">
-                DriveSobr gamifies the sobriety test to help people make better decisions about driving.</p>
-              <a href="#how-to" class="btn btn-success svg-icon">
-              Instructions
+                DriveSobr gamifies the sobriety test to help people make better decisions about <b>driving</b>.</p>
+              <a href="#driving-guide" class="btn btn-light svg-icon">
+              Safe Driving Guide
               </a>
           </div>
       </div>
@@ -56,6 +56,99 @@
       </div>
   </div>
 </section>
+
+<div id = "driving-guide">
+    <section class="py-6">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 mx-auto">
+                    <h2 class="text-center text-md-left">Sober Driving Guide</h2>
+                    <div class="row feature-grid">
+                        <div class="col-sm-6">
+                            <div class="media">
+                                <div class="icon-box">
+                                    <div class="icon-box-inner">
+                                        <span data-feather="check-circle" width="28" height="28"></span>
+                                    </div>
+                                </div>
+                                <div class="media-body">
+                                    Make sure your headlights, taillights, and license plate light all work.
+                                </div>
+                            </div>
+                        </div>
+                <div class="col-sm-6">
+                  <div class="media">
+                      <div class="icon-box">
+                          <div class="icon-box-inner">
+                              <span data-feather="check-circle" width="28" height="28"></span>
+                          </div>
+                      </div>
+                      <div class="media-body">
+                        Make sure you and other passengers wear seat belts.
+                      </div>
+                  </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="media">
+                    <div class="icon-box">
+                        <div class="icon-box-inner">
+                            <span data-feather="check-circle" width="28" height="28"></span>
+                        </div>
+                    </div>
+                    <div class="media-body">
+                        Do not play with your phone while driving.
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="media">
+                    <div class="icon-box">
+                        <div class="icon-box-inner">
+                            <span data-feather="check-circle" width="28" height="28"></span>
+                        </div>
+                    </div>
+                    <div class="media-body">
+                      Do not drink alcohol while driving.
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="media">
+                    <div class="icon-box">
+                        <div class="icon-box-inner">
+                            <span data-feather="check-circle" width="28" height="28"></span>
+                        </div>
+                    </div>
+                    <div class="media-body">
+                      If you drink alcohol, take a rest and take the DriveSobr test before driving again.
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="media">
+                    <div class="icon-box">
+                        <div class="icon-box-inner">
+                            <span data-feather="check-circle" width="28" height="28"></span>
+                        </div>
+                    </div>
+                    <div class="media-body">
+                      Do not drive if you are sleepy.
+                    </div>
+                </div>
+            </div>
+            
+  
+  
+  
+  
+                  </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    </div>
+
   </body>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.7.3/feather.min.js"></script>
