--- a/signup.html
+++ b/signup.html
@@ -116,7 +116,7 @@
                 <div class="col-md-4 inputGroupContainer">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-              <input name="email" placeholder="E-Mail Address" class="form-control"  type="text">
+              <input name="email" placeholder="Name" class="form-control"  type="text">
                 </div>
               </div>
             </div>
@@ -140,7 +140,7 @@
                 <div class="col-md-4 inputGroupContainer">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-              <input name="email" placeholder="E-Mail Address" class="form-control"  type="text">
+              <input name="email" placeholder="Name" class="form-control"  type="text">
                 </div>
               </div>
             </div>
@@ -164,7 +164,7 @@
                 <div class="col-md-4 inputGroupContainer">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-              <input name="email" placeholder="E-Mail Address" class="form-control"  type="text">
+              <input name="email" placeholder="Name" class="form-control"  type="text">
                 </div>
               </div>
             </div>
